# Website

./: battle.py  finalists.json  main.py  ppp.py  pyproject.toml  weather.json
json/: dataround1.json  dataround2.json  dataround3.json  finalists.json
static/assets/css/: main.css  noscript.css
templates/: Bmi.html  bigmac.html  education.html  experience.html  index.html  pyportfolio.html  robobracketbattle.html  weather.html
