[tool.poetry]
name = "repl_python3_PossibleEcstaticAccounting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
django-render = "^0.4.0"
pandas = "^1.4.2"
Nasdaq-Data-Link = "^1.0.1"
pygal = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
